--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "react-router-dom": "^6.14.1",
+    "sass": "^1.63.6"
   }
 }
